Now plugin in instantiated only after plugin install is checked. Now we shouldn't see the yellow bar for install missing plugins on firefox. Still have to fix the case on chrome where after downloading the plugin the carousel tour does not appear.

--- a/projects/server/carousel/css/index.css
+++ b/projects/server/carousel/css/index.css
@@ -242,7 +242,7 @@ body > div#upper-right > div#settings-prompt {
   top:30px;
   right: 10px;
   float:right;
-  z-index: 10000;
+  z-index: 10100;
   line-height:1em;
   padding:15px 10px 15px 10px;
 }
@@ -301,6 +301,7 @@ body > div#lower-right > input.vidbtn {
 }
 body > div#lower-right > input.feedback {
   background-image: url("../images/btn-feedback.png");
+  background-size: 100%;
 }
 body > div#lower-right > input.copyData {
   margin-left: 7px;
@@ -313,11 +314,13 @@ body > div#lower-right > input.twitter {
 body > div#lower-right > input.fbSend {
   width: 61px;
   background-image: url("../images/fbSend.png");
+  background-size: 100%;
 }
 body > div#lower-right > input.fbShare {
   margin-left: 15px;
   width: 69px;
   background-image: url("../images/fbShare.png");
+  background-size: 100%;
 }
 /*<MANJESH>*/
 body > div#lower-right > input#addWhiteBoard {
@@ -332,35 +335,43 @@ body > div#lower-right > input#addItem {
 body > div#lower-right > input#video:disabled,
 input#videoPreview:disabled {
   background-image: url("../images/video-disabled.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#video.on:disabled,
 input#videoPreview.on:disabled {
   background-image: url("../images/video-disabled.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#video,
 input#videoPreview {
   background-image: url("../images/video-off.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#video.on,
 input#videoPreview.on {
   background-image: url("../images/video-on.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#audio:disabled,
 input#audioPreview:disabled {
   background-image: url("../images/sound-disabled.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#audio.off:disabled,
 input#audioPreview.off:disabled {
   background-image: url("../images/sound-disabled.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#audio.off,
 input#audioPreview.off {
   background-image: url("../images/mute.png");
+  background-size: 100%;
 }
 body > div#lower-right > input#audio,
 input#audioPreview {
   margin-left: 5px;
   background-image: url("../images/sound.png");
+  background-size: 100%;
 }
 body > div#lower-left {
   position: absolute;
@@ -1173,5 +1184,20 @@ body > div#meeting > div#streams > div#scontrols > input.right {
 #zoom > .close:hover {
   cursor: pointer;
   opacity: 1.0;
+}
+body > #tour {
+  display: none;
+  position: absolute;
+  width: 30%;
+  height: auto;
+  background: rgba(112,128,144,0.5);
+  border-radius: 5px;
+  color: white;
+  z-index: 10000;
+  padding: 10px;
+}
+body > #tour > #desc {
+  width: 100%;
+  opacity: 0.75;
 }
 /*</MANJESH>*/
